# stashpix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
packaging/: README.md  build.ps1
packaging/pyinstaller/: stashpix.spec  stashpix_cli.py  stashpix_gui.py  stego.spec  stego_cli.py  stego_gui.py
packaging/wix/: Package.wxs
scripts/: cli_stress_test.py  probe_landscape_partial.py  try_landscape_sketch.py
src/stashpix/: __init__.py  cli.py  config.py  engine.py  eula.py  exceptions.py  logging_setup.py  paths.py  settings.py
src/stashpix/api/: app.py  auth.py
src/stashpix/api/static/: index.html  research.html
src/stashpix/core/: authorship.py  base.py  coding.py  crypto.py  dct.py  imaging.py  keys.py  metadata.py  model_store.py  perceptual.py  watermark_frame.py
src/stashpix/gui/: __init__.py  app.py
src/stashpix/i18n/: __init__.py  catalog_en.py  catalog_hu.py
src/stashpix/layers/: __init__.py  lsb.py  robust.py  syncseal.py  wam_local.py
src/stashpix/registry/: store.py
src/stegosuite/: __init__.py  cli.py  config.py  engine.py  eula.py  exceptions.py  logging_setup.py  paths.py
src/stegosuite/api/: __init__.py  app.py  schemas.py
src/stegosuite/api/static/: index.html
src/stegosuite/core/: __init__.py  imaging.py  keys.py
src/stegosuite/gui/: app.py
src/stegosuite/i18n/: __init__.py  catalog_en.py  catalog_hu.py
src/stegosuite/layers/: __init__.py  geometry.py  lsb.py  robust.py  visible.py
src/stegosuite/registry/: __init__.py  store.py
tests/: conftest.py  geo_helpers.py  test_adaptive_jnd.py  test_ai_layers.py  test_authorship.py  test_coding.py  test_edge_match.py  test_engine.py  test_key_security.py  test_lsb.py  test_metadata.py  test_model_integrity.py  test_morph_geo.py  test_no_false_attribution.py  test_perceptual.py  test_realistic_attacks.py  test_registry.py  test_robust.py  test_robust_reliability.py  test_stock_covers.py  test_stress_composite.py  test_visible.py
tests/assets/: README.md
