[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stashpix"
version = "1.5.0"
description = "Robust image ID and steganography — lock ownership into pixels (LSB + DCT watermark + morph sync) with CLI, GUI and REST API."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Rózsavölgyi János" }]
keywords = ["steganography", "watermark", "image-id", "dct", "reed-solomon", "lsb", "stashpix"]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy>=1.21",
    "Pillow>=9.0",
    "reedsolo>=1.7",
    "argon2-cffi>=23.1",
    "cryptography>=41.0",
]

[project.optional-dependencies]
# Geometric synchronization (SIFT) for watermark re-alignment.
geo = ["opencv-contrib-python>=4.6"]
# REST API / SaaS backend.
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]
# Optional SyncSeal (TorchScript geometric sync) — install torch CPU wheel separately if needed:
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
sync = ["torch>=2.2", "torchvision>=0.17"]
# Optional WAM localization — also shallow-clones facebookresearch/watermark-anything on first use.
wam = ["torch>=2.2", "torchvision>=0.17", "omegaconf>=2.3", "timm>=0.9", "einops>=0.7"]
# Both AI helpers.
ai = ["torch>=2.2", "torchvision>=0.17", "omegaconf>=2.3", "timm>=0.9", "einops>=0.7"]
# Test tooling.
dev = ["pytest>=7.0"]
# Standalone bundling (PyInstaller); MSI packaging additionally needs WiX v4+.
packaging = ["pyinstaller>=6.0"]

[project.urls]
Homepage = "https://github.com/arlinamid/stashpix"

[project.scripts]
stashpix = "stashpix.cli:main"
stashpix-gui = "stashpix.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stashpix = ["api/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
